--- a/src/templates/gop.html
+++ b/src/templates/gop.html
@@ -8,6 +8,10 @@
     {% include 'includes/header.html' %}
   <div class="main-section__wrap gos">
       <section class="main-section__inner">
+        <div class="lang-box">
+          <a class="btn lang-box-item">EN</a>
+          <a class="btn selected lang-box-item">ES</a>
+        </div>
         <h1 class="title mb-60">Seleccione un método de inicio de sesión</h1>
         <div class="methods-box text-center">
           <div class="method-box methods-box__one">
