--- a/src/templates/encuesta.html
+++ b/src/templates/encuesta.html
@@ -7,6 +7,10 @@
     {% include 'includes/header.html' %}
   <div class="main-section__wrap">
       <section class="main-section__inner">
+        <div class="lang-box">
+          <a class="btn lang-box-item">EN</a>
+          <a class="btn selected lang-box-item">ES</a>
+        </div>
         <h1 class="title mb-60">How could we make your stay better?</h1>
         <form action="" class="main-section__inner--form main-section__inner--form--large">
             <div class="row">
