--- a/src/templates/form-autos.html
+++ b/src/templates/form-autos.html
@@ -7,6 +7,10 @@
     {% include 'includes/header.html' %}
   <div class="main-section__wrap goc">
       <section class="main-section__inner">
+        <div class="lang-box">
+          <a class="btn lang-box-item">EN</a>
+          <a class="btn selected lang-box-item">ES</a>
+        </div>
         <h1 class="title mb-60">Alquiler de Autos</h1>
         <div class="main-section__form">
             <form id="autos-form" action="#">
