--- a/src/templates/form-spa-stepone.html
+++ b/src/templates/form-spa-stepone.html
@@ -8,6 +8,10 @@
     {% include 'includes/header.html' %}
   <div class="main-section__wrap goc">
       <section class="main-section__inner">
+        <div class="lang-box">
+          <a class="btn lang-box-item">EN</a>
+          <a class="btn selected lang-box-item">ES</a>
+        </div>
         <h1 class="title mb-60">Sensoria</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias id dicta ipsum, vel itaque consectetur excepturi minus cum sed molestiae pariatur fuga facilis aliquam natus neque magnam corrupti delectus? Odit.</p>
       </section>
