--- a/src/templates/oh-creditAccess.html
+++ b/src/templates/oh-creditAccess.html
@@ -7,6 +7,10 @@
     {% include 'includes/header.html' %}
   <div class="main-section__wrap">
       <section class="main-section__inner">
+        <div class="lang-box">
+          <a class="btn lang-box-item">EN</a>
+          <a class="btn selected lang-box-item">ES</a>
+        </div>
         <form action="" class="main-section__inner--form">
           <div class="row">
             <div class="col-xs-12">
