--- a/src/styles/modules/buttons.styl
+++ b/src/styles/modules/buttons.styl
@@ -17,6 +17,7 @@
 	font-family $primary-font
 	text-transform: uppercase
 	color:#fff
+	border:0
 	&-big
 		padding: 0px 25px
 	&-fixed
@@ -31,9 +32,18 @@
 		font-size: 13px
 	&.btn-default
 		btn(#fff, #d1d1d1, #d1d1d1, false,false)
+	&.btn-reverse
+		btn(#d1d1d1, #ffffff, #d1d1d1, false,false)
+		background-color: #d1d1d1!important
+		border:2px solid #d1d1d1!important
+		color:#fff!important
+		&:hover
+			background-color: darken(#d1d1d1,30%)!important
+			border:2px solid darken(#d1d1d1,30%)!important
 	&.btn-transparent
 		background-color: transparent!important
 		border:2px solid #fff!important
+		color:#fff!important
 		&:hover
 			background-color:rgba(#ffffff,30%)!important
 		// btn(#fff, green,yellow, false,false)
@@ -51,3 +61,4 @@
 			color white
 	&.lang-box-item
 		width 74px
+		margin-top:20px
