--- a/src/templates/gos.html
+++ b/src/templates/gos.html
@@ -27,6 +27,9 @@
               <p>*Disponible en el Lobby (Máquina expendedora)</p>
           </div>
         </div>
+        <div class="skip text-center mt-10">
+            <button class="btn btn-xs btn-primary">skip</button>
+        </div>
       </section>
   {% include 'includes/footer.html' %} 
   </div>
