--- a/src/styles/layouts/main.styl
+++ b/src/styles/layouts/main.styl
@@ -8,6 +8,7 @@
 		margin:0 auto
 	&__inner
 		padding-top:190px
+		padding-bottom: 30px
 		width: 100%
 		padding-left: 1.5rem
 		padding-right: 1.5rem
